--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ceno?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=8Shan
 spring.jpa.show-sql=true
+trace=false
 #server.servlet.session.timeout=
 server.port=8000
 spring.thymeleaf.cache=false
