Add support for post videos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=8Shan
 spring.jpa.show-sql=true
 trace=false
+spring.servlet.multipart.max-file-size=8MB
 #server.servlet.session.timeout=
 server.port=8000
 spring.thymeleaf.cache=false
