Add ability to pin, delete, ... post
This will also add checks to new post inputs not to be empty.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,14 @@ spring.jpa.show-sql=true
 trace=false
 spring.servlet.multipart.max-file-size=8MB
 #server.servlet.session.timeout=
+#spring.thymeleaf.cache=false
 server.port=8000
-spring.thymeleaf.cache=false
 ############ custom properties ############
 title=Ceno
 desc=If you're looking for top news, trending posts and funny stuff on the web, here our users pick them for you.
 hot-min=1
 top-posts.size=3
 top-category-posts.size=6
-editors-pick.size=10
+pined-posts.size=10
 cats.page.size=1
 queries.users-query=select name, password, true from user where name=?
