Make share icon an inline svg

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,22 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/ceno?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=8Shan
+spring.jpa.properties.hibernate.search.default.directory_provider=filesystem
+spring.jpa.properties.hibernate.search.default.indexBase=index/
 spring.jpa.show-sql=true
 trace=false
 spring.servlet.multipart.max-file-size=8MB
 #server.servlet.session.timeout=
-#spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 server.port=8000
 ############ custom properties ############
-title=Ceno
-desc=If you're looking for top news, trending posts and funny stuff on the web, here our users pick them for you.
+queries.users-query=select name, password, true from user where name=?
+like.score=20
 hot-min=1
 top-posts.size=3
 top-category-posts.size=6
-pined-posts.size=10
-cats.page.size=1
-queries.users-query=select name, password, true from user where name=?
+pinned-posts.size=10
+category.load-size=1
+search.max-results=10
+search.max-similars=5
+user.min-edit-score=0
