--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.uni'
-version = '0.0.1-SNAPSHOT'
+group = 'ir'
+version = '0.9.0-SNAPSHOT'
 sourceCompatibility = 9
 
 repositories {
@@ -24,12 +24,17 @@ repositories {
 }
 
 dependencies {
+    compile('com.github.ben-manes.caffeine:caffeine')
+    compile group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.9.1.Final'
+    // compile('javax.annotation:javax.annotation-api')
+    compile('org.apache.tika:tika-core:1.17')
+    compile('org.springframework.boot:spring-boot-starter-cache')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-devtools')
-    compile('org.apache.tika:tika-core:1.17')
+    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
     runtime('mysql:mysql-connector-java')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
