--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,9 @@ repositories {
 
 dependencies {
     compile('com.github.ben-manes.caffeine:caffeine')
-    compile group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.9.1.Final'
-    // compile('javax.annotation:javax.annotation-api')
+    compile ('com.rometools:rome:1.9.0')
+    compile ('org.hibernate:hibernate-search-orm:5.9.1.Final')
+    // compile('javax.annotation:javax.annotation-api') // for @PostConstruct and...
     compile('org.apache.tika:tika-core:1.17')
     compile('org.springframework.boot:spring-boot-starter-cache')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
