--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,15 +11,16 @@ spring.servlet.multipart.max-file-size=8MB
 #server.servlet.session.timeout=
 spring.thymeleaf.cache=true
 server.port=8000
-############ custom properties ############
-queries.users-query=select name, password, true from user where name=?
-like.score=20
+#####################################################
+################# custom properties #################
+users-query=select name, password, true from user where name=?
+like-score=20
 hot-min=1
-top-posts.size=3
-top-category-posts.size=6
-pinned-posts.size=10
-category.load-size=1
-search.max-results=10
-search.max-similars=5
-user.min-edit-score=0
-feed.max-items=10
+top-posts-size=3
+top-category-posts-size=6
+pinned-posts-size=10
+category-slice-size=1
+search-max-results=10
+search-max-similars=5
+user-min-edit-score=0
+feed-max-items=10
