Add javadoc to methods and classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,11 @@ spring.servlet.multipart.max-file-size=8MB
 #server.servlet.session.timeout=
 spring.thymeleaf.cache=true
 server.port=8000
+#spring.mvc.throw-exception-if-no-handler-found=true
 #####################################################
 ################# custom properties #################
 users-query=select name, password, true from user where name=?
+encoder-strength=10
 like-score=20
 hot-min=1
 top-posts-size=3
