--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .gradle
 /build/
-!gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -12,15 +11,7 @@
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+/out/
 *.iws
 *.iml
 *.ipr
-
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
