--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ buildscript {
     }
 }
 
+// for gradle to be aware of lombok
+plugins {
+    id "io.freefair.lombok" version "4.1.1"
+}
+
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
