--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 
 // for gradle to be aware of lombok
 plugins {
-    id "io.freefair.lombok" version "4.1.1"
+    id 'io.freefair.lombok' version '4.1.1'
 }
 
 apply plugin: 'java'
