--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,13 @@ repositories {
     mavenCentral()
 }
 
+wrapper {
+    // Add a gradle wrapper script to your source folders (by running the wrapper task).
+    // The wrapper script when invoked, downloads the defined gradle version, and executes it.
+    // By distributing the wrapper with your project, anyone can work with it without needing to install Gradle beforehand
+    gradleVersion = '5.5'
+}
+
 task cleanAll {
     doLast {
         Files.deleteIfExists(Paths.get("D:/IdeaProjects/ceno/out"))
