Add some hibernate properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,13 @@ spring.datasource.username=root
 spring.datasource.password=8Shan
 #spring.datasource.initialization-mode=
 #spring.datasource.data=
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# Spring Boot lets us set any available hibernate property using: spring.jpa.properties.*
+spring.jpa.properties.hibernate.format_sql=true
+# Quote all database identifiers to prevent clash with sql keywords
+# Alternatively a specific column or table can be quoted with double quote e.g. "\"post\""
+spring.jpa.properties.hibernate.globally_quoted_identifiers=false
 spring.jpa.properties.hibernate.search.default.directory_provider=filesystem
 spring.jpa.properties.hibernate.search.default.indexBase=index/
 spring.jpa.properties.hibernate.search.lucene_version=LATEST
