Rename "langs/messages" messages files to "messages/strings"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.search.default.indexBase=index/
 spring.jpa.properties.hibernate.search.lucene_version=LATEST
 # to disable re-validation when persisting entities (causes problem to user password)
 spring.jpa.properties.javax.persistence.validation.mode=none
-spring.messages.basename=langs.messages
+spring.messages.basename=messages.strings
 spring.servlet.multipart.max-file-size=8MB
 spring.mvc.async.request-timeout=1200s
 # https port (default is 443 meaning if you type an https url without port, it assumes 443)
