--- a/src/main/resources/messages/strings.properties
+++ b/src/main/resources/messages/strings.properties
@@ -21,8 +21,10 @@ prompt.required=Required
 prompt.login-fail=Incorrect username or password
 prompt.video-not-supported=Your browser does not support video content!
 prompt.not-logged-in=You're not logged in
-prompt.log-in=Already registered? {0}Log In{1}
-prompt.sign-up=Not registered? {0}Create an account{1}
+prompt.log-in-part-1=Already registered?
+prompt.log-in-part-2=Log In
+prompt.sign-up-part-1=Not registered?
+prompt.sign-up-part-2=Create an account
 comments=comments
 wrt-comment=Your opinion:
 send=Send
