Extract inlined theme colors to separate CSS theme files

--- a/src/main/resources/themes/cyan.properties
+++ b/src/main/resources/themes/cyan.properties
@@ -1,5 +1,4 @@
 name=cyan
 favicon=/img/favicon-cyan.png
-primary-color=#00ACC1
-secondary-color=#0097A7
-tertiary-color=#00838F
+colors=/css/theme-colors-cyan.min.css
+android-toolbar-color=#00ACC1
