--- a/src/main/resources/themes/orange.properties
+++ b/src/main/resources/themes/orange.properties
@@ -1,5 +1,4 @@
 name=orange
 favicon=/img/favicon-orange.png
-primary-color=#FF9800
-secondary-color=#FB8C00
-tertiary-color=#F57C00
+colors=/css/theme-colors-orange.min.css
+android-toolbar-color=#FF9800
