--- a/src/main/resources/themes/pink.properties
+++ b/src/main/resources/themes/pink.properties
@@ -1,5 +1,4 @@
 name=pink
 favicon=/img/favicon-pink.png
-primary-color=#E91E63
-secondary-color=#D81B60
-tertiary-color=#C2185B
+colors=/css/theme-colors-pink.min.css
+android-toolbar-color=#E91E63
