--- a/src/main/resources/messages/strings.properties
+++ b/src/main/resources/messages/strings.properties
@@ -3,7 +3,6 @@ description=If you're looking for top news, trending posts and funny stuff on th
 user.created=Welcome to Ceno!
 user.not-created=Sorry, there was an error registering you. Please try again
 search-placeholder=Search for posts...
-search=Search for
 log-in=Log in
 sign-up=Sign up
 log-out=Logout
@@ -14,7 +13,10 @@ funny=Funny
 news=News
 celebrities=Celebrities
 novice=Novice!
-posts=posts
+page-title.post=Ceno - {0}
+page-title.error=Ceno - Error!
+page-title.search=Ceno - Search for "{0}"
+page-title.category=Ceno - {0} posts
 prompt.already-taken=Already taken
 prompt.invalid=Invalid
 prompt.required=Required
