Use ChoiceFormat to format plural strings nicely in message files

--- a/src/main/resources/messages/strings.properties
+++ b/src/main/resources/messages/strings.properties
@@ -13,6 +13,9 @@ funny=Funny
 news=News
 celebrities=Celebrities
 novice=Novice!
+# See https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/text/ChoiceFormat.html
+title.search-result={0, choice, 0#No result|1#One result|1<{0, number, integer} results} found
+title.post-comments={0, choice, 0#No comments yet.|1#One comment:|1<{0, number, integer} comments:}
 page-title.post=Ceno - {0}
 page-title.error=Ceno - Error!
 page-title.search=Ceno - Search for "{0}"
@@ -27,7 +30,6 @@ prompt.log-in-part-1=Already registered?
 prompt.log-in-part-2=Log In
 prompt.sign-up-part-1=Not registered?
 prompt.sign-up-part-2=Create an account
-comments=comments
 wrt-comment=Your opinion:
 send=Send
 avatar.change=Change avatar
