Add refactorings in search page

--- a/src/main/resources/messages/strings.properties
+++ b/src/main/resources/messages/strings.properties
@@ -20,6 +20,8 @@ page-title.post=Ceno - {0}
 page-title.error=Ceno - Error!
 page-title.search=Ceno - Search for "{0}"
 page-title.category=Ceno - {0} posts
+prompt.no-search-result=No result found!
+prompt.max-search-results-shown=(only top {0, number, integer} displayed)
 prompt.already-taken=Already taken
 prompt.invalid=Invalid
 prompt.required=Required
