Localize age strings

--- a/src/main/resources/messages/strings.properties
+++ b/src/main/resources/messages/strings.properties
@@ -13,6 +13,10 @@ funny=Funny
 news=News
 celebrities=Celebrities
 novice=Novice!
+age.seconds-old=seconds age
+age.minutes-old={0, number, integer} {0, choice, 1#minute|1<minutes} ago
+age.hours-old={0, number, integer} {0, choice, 1#hour|1<hours} ago
+age.days-old={0, number, integer} {0, choice, 1#day|1<days} ago
 # See https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/text/ChoiceFormat.html
 title.search-result={0, choice, 0#No result|1#One result|1<{0, number, integer} results} found
 title.post-comments={0, choice, 0#No comments yet.|1#One comment:|1<{0, number, integer} comments:}
