Externalize and localize a message

--- a/src/main/resources/messages/strings.properties
+++ b/src/main/resources/messages/strings.properties
@@ -20,6 +20,7 @@ age.days-old={0, number, integer} {0, choice, 1#day|1<days} ago
 # See https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/text/ChoiceFormat.html
 title.search-result={0, choice, 0#No result|1#One result|1<{0, number, integer} results} found
 title.post-comments={0, choice, 0#No comments yet.|1#One comment:|1<{0, number, integer} comments:}
+title.hot-post={0, choice, 1#One comment|1<{0, number, integer} comments}
 page-title.post=Ceno - {0}
 page-title.error=Ceno - Error!
 page-title.search=Ceno - Search for "{0}"
