Update some messages

--- a/src/main/resources/messages/strings.properties
+++ b/src/main/resources/messages/strings.properties
@@ -76,6 +76,6 @@ footer.faq=FAQ
 footer.help=Help
 footer.tos=Terms of service
 footer.policy=Privacy policy
-footer.select-lang=Select language:
-footer.select-theme=Select color flavor:
+footer.select-theme=Site color flavor:
+footer.select-lang=Site language:
 footer.follow=Follow Ceno:
