--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.application.name=Ceno
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/ceno?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=4548
+# Set the password via OS environment variables (https://stackoverflow.com/a/35535138)
+# Password hint: a 4-digit number
+spring.datasource.password=${CENO_DATABASE_PASSWORD}
 #spring.datasource.initialization-mode=
 #spring.datasource.data=
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
